add overflow-x-hidden to index body

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
-<body>
+<body class="overflow-x-hidden">
   <div class="loader absolute w-full z-10 h-full bg-black flex items-center justify-center">
     <span class="lettera text-blue-800 font-bold tracking-[15px]">L</span>
     <span class="lettera text-blue-800 font-bold tracking-[15px]">O</span>
@@ -66,7 +66,7 @@
             </li>
           </ul>
         </div>
-        <div class="md:hidden w-12">
+        <div    class="md:hidden w-12">
           <button id="menu-button" class="text-blue-600 focus:outline-none z-30 relative transition-transform">
             <!-- Icon per Hamburger Menu -->
             <svg id="hamburger-icon" class="w-6 h-6 inline-block absolute -top-5 content-center rotate-180" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
