change index css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="flex justify-between h-[70px] bg-black text-white items-center fixed w-full z-50 nav-bar-menu">      
       <div class="relative w-full h-[70px] flex items-center justify-between md:justify-around">
         <div class="flex ml-5 md:ml-0 items-center h-[70px]">
-          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="images/Logo1.png" alt="logo sito fitness"/>
+          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="images/Logo1.png" alt=""/>
         </div>
         <div 
         data-aos="zoom-in" 
