--- a/corsi.html
+++ b/corsi.html
@@ -39,7 +39,7 @@
     <nav class="flex justify-between h-[70px] bg-black text-white items-center fixed w-full z-50 nav-bar-menu">      
       <div class="relative w-full h-[70px] flex items-center justify-between md:justify-around">
         <div class="flex ml-5 md:ml-0 items-center h-[70px]">
-          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="images/Logo1.png" alt="logo sito fitness"/>
+          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="Images/Logo1.png" alt="logo sito fitness"/>
         </div>
         <div 
         data-aos="zoom-in" 
@@ -103,11 +103,23 @@
     </nav>
   </header>
   <div id="toTopButton" class="hidden1">
+    <div class="loader absolute w-full z-10 h-full bg-black flex items-center justify-center">
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">L</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">O</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">A</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">D</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">I</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">N</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">G</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">.</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">.</span>
+      <span class="lettera text-blue-800 font-bold tracking-[15px]">.</span>
+    </div>
     <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
-      <img class="size-7 m-auto" src="images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
+      <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
     </button>
   </div> 
-  <section class="bg-[url(images/corsi-bg.jpg)] bg-cover bg-center bg-fixed h-[300px] flex flex-col justify-center items-center w-full">
+  <section class="bg-[url(Images/corsi-bg.jpg)] bg-cover bg-center bg-fixed h-[300px] flex flex-col justify-center items-center w-full">
     <div 
     data-aos="zoom-in"
     class="flex flex-col justify-center text-white items-center px-5">
@@ -289,10 +301,10 @@
         </p>
       </div>
       <div class="flex gap-6">
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="images/icons8-instagram-48.png" alt="icona instagram"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="images/icons8-twitterx-48.png" alt="icona x"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="images/icons8-tic-tac-100.png" alt="icona tik tok"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="Images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="Images/icons8-instagram-48.png" alt="icona instagram"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="Images/icons8-twitterx-48.png" alt="icona x"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="Images/icons8-tic-tac-100.png" alt="icona tik tok"/>
       </div>
     </div>
   </footer>
