--- a/article2.html
+++ b/article2.html
@@ -39,7 +39,7 @@
     <nav class="flex justify-between h-[70px] bg-black text-white items-center fixed w-full z-50 nav-bar-menu">      
       <div class="relative w-full h-[70px] flex items-center justify-between md:justify-around">
         <div class="flex ml-5 md:ml-0 items-center h-[70px]">
-          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="images/Logo1.png" alt="logo sito fitness"/>
+          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="Images/Logo1.png" alt="logo sito fitness"/>
         </div>
         <div 
         data-aos="zoom-in" 
@@ -109,6 +109,11 @@
     <p class="mt-4 text-lg">Il tuo piano per guadagnare muscoli e forza, passo dopo passo.</p>
   </section>
   <main>
+    <div id="toTopButton" class="hidden1">
+      <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
+        <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
+      </button>
+    </div> 
     <section 
     data-aos="fade-up"
     data-aos-duration="1500"
@@ -288,10 +293,10 @@
         </p>
       </div>
       <div class="flex gap-6">
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="images/icons8-instagram-48.png" alt="icona instagram"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="images/icons8-twitterx-48.png" alt="icona x"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="images/icons8-tic-tac-100.png" alt="icona tik tok"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="Images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="Images/icons8-instagram-48.png" alt="icona instagram"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="Images/icons8-twitterx-48.png" alt="icona x"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="Images/icons8-tic-tac-100.png" alt="icona tik tok"/>
       </div>
     </div>
   </footer>
