--- a/article3.html
+++ b/article3.html
@@ -23,23 +23,16 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 <body class="bg-stone-300 text-white font-sans leading-relaxed bg-[url(Images/proteine-bg.jpg)] bg-no-repeat bg-cover bg-center bg-fixed">
-  <div class="loader absolute w-full z-10 h-full bg-black flex items-center justify-center">
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">L</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">O</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">A</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">D</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">I</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">N</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">G</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">.</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">.</span>
-    <span class="lettera text-blue-800 font-bold tracking-[15px]">.</span>
-  </div>
+  <div id="toTopButton" class="hidden1">
+    <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
+      <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
+    </button>
+  </div> 
   <header class="pb-[70px]">
     <nav class="flex justify-between h-[70px] bg-black text-white items-center fixed w-full z-50 nav-bar-menu">      
       <div class="relative w-full h-[70px] flex items-center justify-between md:justify-around">
         <div class="flex ml-5 md:ml-0 items-center h-[70px]">
-          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="images/Logo1.png" alt="logo sito fitness"/>
+          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="Images/Logo1.png" alt="logo sito fitness"/>
         </div>
         <div 
         data-aos="zoom-in" 
@@ -105,13 +98,18 @@
   <section
   data-aos="zoom-in"
   class="bg-neutral-800 h-48 text-white flex flex-col justify-center items-center text-center py-8">
+  <div id="toTopButton" class="hidden1">
+    <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
+      <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
+    </button>
+  </div> 
     <h1 class="text-4xl font-bold">Ottimizza i Risultati con le Proteine</h1>
     <p class="text-lg mt-2">La tua guida per un uso strategico delle proteine nella muscolazione</p>
   </section>
   <main class="max-w-7xl mx-auto mt-10 pb-28 p-6">
     <section 
     data-aos="fade-up"
-    data-aos-duration="1500"
+    data-aos-duration="2000"
     class="shadow-lg rounded-lg p-6">
       <h2 class="text-3xl font-bold mb-4 text-green-600">Perché le Proteine sono Importanti?</h2>
       <p class="text-white leading-relaxed">
@@ -185,7 +183,7 @@
     data-aos="fade-up"
     data-aos-duration="1500"
     class="relative rounded-lg mt-10">
-      <img src="images/article3-proteine.jpg" alt="Alimenti ricchi di proteine" class=" w-full h-[400px] object-cover rounded-lg shadow-lg">
+      <img src="Images/article3-proteine.jpg" alt="Alimenti ricchi di proteine" class=" w-full h-[400px] object-cover rounded-lg shadow-lg">
       <p class="absolute bottom-4 left-4 bg-white px-4 py-2 rounded-md shadow-md text-gray-800 font-medium">
         "Le proteine sono il carburante del tuo corpo. Usale con intelligenza."
       </p>
@@ -274,10 +272,10 @@
         </p>
       </div>
       <div class="flex gap-6">
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="images/icons8-instagram-48.png" alt="icona instagram"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="images/icons8-twitterx-48.png" alt="icona x"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="images/icons8-tic-tac-100.png" alt="icona tik tok"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="Images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="Images/icons8-instagram-48.png" alt="icona instagram"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="Images/icons8-twitterx-48.png" alt="icona x"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="Images/icons8-tic-tac-100.png" alt="icona tik tok"/>
       </div>
     </div>
   </footer>
