--- a/chisiamo.html
+++ b/chisiamo.html
@@ -39,7 +39,7 @@
     <nav class="flex justify-between h-[70px] bg-black text-white items-center fixed w-full z-50 nav-bar-menu">      
       <div class="relative w-full h-[70px] flex items-center justify-between md:justify-around">
         <div class="flex ml-5 md:ml-0 items-center h-[70px]">
-          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="images/Logo1.png" alt="logo sito fitness"/>
+          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="Images/Logo1.png" alt="logo sito fitness"/>
         </div>
         <div 
         data-aos="zoom-in" 
@@ -105,7 +105,7 @@
   <main>
     <div id="toTopButton" class="hidden1">
       <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
-        <img class="size-7 m-auto" src="images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
+        <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
       </button>
     </div> 
     <section class="h-[1000px] md:h-[780px] bg-neutral-900 flex flex-col justify-center items-center relative overflow-hidden">
@@ -129,7 +129,7 @@
       </div>
       <img class="absolute w-[1165px] -right-40" src="Images/about-deco.png" alt="">
     </section>
-    <section class="bg-[url(images/chisiamo-bg.jpg)] bg-no-repeat bg-cover bg-center bg-fixed  pt-20 flex flex-col items-center justify-center pb-20">
+    <section class="bg-[url(Images/chisiamo-bg.jpg)] bg-no-repeat bg-cover bg-center bg-fixed  pt-20 flex flex-col items-center justify-center pb-20">
         <div class="h-20 mb-10">
             <h1
             data-aos="zoom-in"
@@ -271,10 +271,10 @@
         </p>
       </div>
       <div class="flex gap-6">
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="images/icons8-instagram-48.png" alt="icona instagram"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="images/icons8-twitterx-48.png" alt="icona x"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="images/icons8-tic-tac-100.png" alt="icona tik tok"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="Images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="Images/icons8-instagram-48.png" alt="icona instagram"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="Images/icons8-twitterx-48.png" alt="icona x"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="Images/icons8-tic-tac-100.png" alt="icona tik tok"/>
       </div>
     </div>
   </footer>
