--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="flex justify-between h-[70px] bg-black text-white items-center fixed w-full z-50 nav-bar-menu">      
       <div class="relative w-full h-[70px] flex items-center justify-between md:justify-around">
         <div class="flex ml-5 md:ml-0 items-center h-[70px]">
-          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="images/Logo1.png" alt=""/>
+          <img class="size-14 md:size-16  rounded-full cursor-pointer" src="Images/Logo1.png" alt=""/>
         </div>
         <div 
         data-aos="zoom-in" 
@@ -106,10 +106,10 @@
   <main>
     <div id="toTopButton" class="hidden1">
       <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
-        <img class="size-7 m-auto" src="images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
+        <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
       </button>
     </div>  
-    <section id="home" class="h-[calc(100vh-70px)] flex bg-[url(images/header5.png)] items-center justify-center bg-no-repeat bg-cover  flex-col">
+    <section id="home" class="h-[calc(100vh-70px)] flex bg-[url(Images/header5.png)] items-center justify-center bg-no-repeat bg-cover  flex-col">
       <div data-aos="fade-up"
       data-aos-duration="3000">
       </div>
@@ -130,7 +130,7 @@
         </div>
       </div>
     </section>
-    <section class="h-[350px] lg:h-72 bg-[url(images/join.png)] p-10 bg-no-repeat bg-cover flex flex-col justify-center text-center items-center gap-y-5">
+    <section class="h-[350px] lg:h-72 bg-[url(Images/join.png)] p-10 bg-no-repeat bg-cover flex flex-col justify-center text-center items-center gap-y-5">
       <h1 
       data-aos="fade-up"
       data-aos-duration="1000"
@@ -148,7 +148,7 @@
       data-aos-duration="1000"
       class="font-bold px-7 py-2 bg-black text-white border border-white rounded-md">6H - 23H</SPan>
     </section>
-    <section class="overflow-hidden h-[1200px] xl:h-[700px] bg-[url(images/header1.png)] px-8 bg-no-repeat bg-fixed bg-cover flex flex-col xl:flex-row items-center justify-center gap-10">
+    <section class="overflow-hidden h-[1200px] xl:h-[700px] bg-[url(Images/header1.png)] px-8 bg-no-repeat bg-fixed bg-cover flex flex-col xl:flex-row items-center justify-center gap-10">
       <div class="w-[800px] h-[600px] flex justify-center items-center" title="clicca per visualizzare l'immagine">
         <div 
         data-aos="fade-up"
@@ -159,7 +159,7 @@
           data-aos="fade-right"
           data-aos-offset="500"
           data-aos-easing="ease-in-sine"
-          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px]  rounded-md cursor-pointer relative h-[400px]">
+          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px] rounded-md cursor-pointer relative h-[400px]">
             <img class="w-[200px] md:w-[300px] lg:w-[400px] border border-yellow-100 h-[400px] rounded-md object-cover" src="Images/slider1.jpg" alt="imaggine della sala di box">
             <h5 class="uppercase absolute text-white top-[50%] -left-2 md:left-0 font-bold text-xl md:text-2xl">PESI</h5>
             <div class="details w-72 absolute bottom-[20px] left-[20px]">
@@ -171,7 +171,7 @@
           data-aos="fade-right"
           data-aos-offset="450"
           data-aos-easing="ease-in-sine"
-          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px]  rounded-md cursor-pointer relative h-[400px]">
+          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px] rounded-md cursor-pointer relative h-[400px]">
             <img class="w-[200px] md:w-[300px] lg:w-[400px] border border-yellow-100 h-[460px] rounded-md object-cover" src="Images/12.jpg" alt="imaggine della sala di box">
             <h5 class="uppercase absolute text-white top-[50%] -left-[11px] md:left-0  font-bold text-xl md:text-2xl">BOX</h5>
             <div class="details w-72 absolute bottom-[20px] left-[20px]">
@@ -183,7 +183,7 @@
           data-aos="fade-right"
           data-aos-offset="400"
           data-aos-easing="ease-in-sine"
-          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px]  rounded-md cursor-pointer relative h-[400px]">
+          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px] rounded-md cursor-pointer relative h-[400px]">
             <img class="w-[200px] md:w-[300px] lg:w-[400px] border border-yellow-100 h-[500px] rounded-md object-cover" src="Images/slider3.jpg" alt="imaggine della sala di box">
             <h5 class="uppercase absolute text-white top-[50%] -left-5 md:-left-3 font-bold text-xl md:text-2xl">RELAX</h5>
             <div class="details w-72 absolute bottom-[20px] left-[20px]">
@@ -195,7 +195,7 @@
           data-aos="fade-right"
           data-aos-offset="350"
           data-aos-easing="ease-in-sine"
-          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px]  rounded-md cursor-pointer relative h-[400px]">
+          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px] rounded-md cursor-pointer relative h-[400px]">
             <img class="w-[200px] md:w-[300px] lg:w-[400px] border border-yellow-100 h-[500px] rounded-md object-cover" src="Images/slider4.jpg" alt="imaggine della sala di box">
             <h5 class="uppercase absolute text-white top-[50%] -left-4 md:-left-[6px] font-bold text-xl md:text-2xl">AERO</h5>
             <div class="details w-72 absolute bottom-[20px] left-[20px]">
@@ -207,7 +207,7 @@
           data-aos="fade-right"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine"
-          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px]  rounded-md cursor-pointer relative h-[400px]">
+          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px] rounded-md cursor-pointer relative h-[400px]">
             <img class="w-[200px] md:w-[300px] lg:w-[400px] border border-yellow-100 h-[500px] rounded-md object-cover" src="Images/slider5.jpg" alt="imaggine della sala di box">
             <h5 class="uppercase absolute text-white top-[50%] -left-7 md:-left-5 font-bold text-xl md:text-2xl">CARDIO</h5>
             <div class="details w-72 absolute bottom-[20px] left-[20px]">
@@ -219,7 +219,7 @@
           data-aos="fade-right"
           data-aos-offset="250"
           data-aos-easing="ease-in-sine"
-          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px]  rounded-md cursor-pointer relative h-[400px]">
+          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px] rounded-md cursor-pointer relative h-[400px]">
             <img class="w-[200px] md:w-[300px] lg:w-[400px] border border-yellow-100 h-[460px] rounded-md object-cover" src="Images/slider6.jpg" alt="imaggine della sala di box">
             <h5 class="uppercase absolute text-white top-[50%] -left-[22px] md:-left-[13px] font-bold text-xl md:text-2xl">DOCCE</h5>
             <div class="details w-72 absolute bottom-[20px] left-[20px]">
@@ -231,7 +231,7 @@
           data-aos="fade-right"
           data-aos-offset="100"
           data-aos-easing="ease-in-sine"
-          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px]  rounded-md cursor-pointer relative h-[400px]">
+          class="slider-img transition-all duration-700 ease-in-out md:w-[55px] w-[22px] rounded-md cursor-pointer relative h-[400px]">
             <img class="w-[200px] md:w-[300px] lg:w-[400px] border border-yellow-100 h-[400px] rounded-md object-cover" src="Images/slider7.jpg" alt="imaggine della sala di box">
             <h5 class="uppercase absolute text-white top-[50%] -left-6 md:-left-4 font-bold text-xl md:text-2xl">SAUNA</h5>
             <div class="details w-72 absolute bottom-[20px] left-[20px]">
@@ -270,7 +270,7 @@
         data-aos="zoom-in"
         class="font-krona text-sm lg:text-xl">I NOSTRI COACH SONO SEMPRE PRESENTI PER VOI</h4> 
       </div>
-      <div class=" bg-[url(images/011.jpg)] py-10 md:h-[600px] lg:h-[700px] bg-no-repeat bg-cover justify-center items-center place-items-center bg-fixed flex ">
+      <div class=" bg-[url(Images/011.jpg)] py-10 md:h-[600px] lg:h-[700px] bg-no-repeat bg-cover justify-center items-center place-items-center bg-fixed flex ">
         <div class="md:h-[400px] lg:h-[600px] justify-center items-center place-items-center bg-fixed flex flex-wrap gap-x-4">
           <div
           data-aos="fade-right"
@@ -351,7 +351,7 @@
       </div>
       <img class="z-1 hidden xl:inline-block lg:absolute xl:w-[533px] xl:-right-40 2xl:-right-24" src="Images/deco.png" alt="">
     </section>
-    <section class="h-[1700px] md:h-[1100px] lg:h-[1350px] xl:h-[1400px] bg-[url(images/bg-prezzi.jpeg)] bg-cover bg-center bg-fixed flex flex-col justify-center items-center pb-20 xl:pb-40">
+    <section class="h-[1700px] md:h-[1100px] lg:h-[1350px] xl:h-[1400px] bg-[url(Images/bg-prezzi.jpeg)] bg-cover bg-center bg-fixed flex flex-col justify-center items-center pb-20 xl:pb-40">
       <img class="w-20 relative -top-20 md:hidden" src="Images/deco-iscriviti.png" alt="">
       <h4 
       data-aos="zoom-in"
@@ -503,7 +503,7 @@
         <div class="w-60 lg:w-44 xl:w-60">
           <span class="hover:font-semibold"><a href="prodotti.html">I NOSTRI PRODOTTI</a></span>
           <ul class="mt-5 font-semibold text-sm hover:font-extrabold">
-            <li><a href="#activities">EVOLVING FITNESS</a></li>
+            <li><a href="index.html">EVOLVING FITNESS</a></li>
           </ul>
         </div>
         <div class="w-80 xl:w-80">
@@ -568,10 +568,10 @@
         </p>
       </div>
       <div class="flex gap-6">
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="images/icons8-instagram-48.png" alt="icona instagram"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="images/icons8-twitterx-48.png" alt="icona x"/>
-        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="images/icons8-tic-tac-100.png" alt="icona tik tok"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale facrbook" src="Images/icons8-facebook-entouré-48.png" alt="icona facebook"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Instagram" src="Images/icons8-instagram-48.png" alt="icona instagram"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale Twitter" src="Images/icons8-twitterx-48.png" alt="icona x"/>
+        <img class="size-5 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.3]" title="Canale tik tok" src="Images/icons8-tic-tac-100.png" alt="icona tik tok"/>
       </div>
     </div>
   </footer>
