change image to Image in corsi files

--- a/corsi.html
+++ b/corsi.html
@@ -127,7 +127,7 @@
       <p class="text-center font-semibold mt-2 text-lg">Scopri i nostri corsi e scegli quello perfetto per te!</p>
     </div>
   </section>
-  <main class="bg-[url(images/corsi.jpg)] pt-16 px-12 pb-32">
+  <main class="bg-[url(Images/corsi.jpg)] pt-16 px-12 pb-32">
     <div class="flex flex-wrap justify-center gap-10">
       <div 
       data-aos="fade-up"
