--- a/chisiamo.html
+++ b/chisiamo.html
@@ -129,64 +129,64 @@
       </div>
       <img class="absolute w-[1165px] -right-40" src="Images/about-deco.png" alt="">
     </section>
-    <section class="bg-[url(Images/chisiamo-bg.jpg)] bg-no-repeat bg-cover bg-center bg-fixed  pt-20 flex flex-col items-center justify-center pb-20">
-        <div class="h-20 mb-10">
-            <h1
-            data-aos="zoom-in"
-            class="font-krona text-white">I COACH</h1>
+    <section class="bg-[url(Images/chisiamo-bg.jpg)] overflow-x-hidden bg-no-repeat bg-cover bg-center bg-fixed  pt-20 flex flex-col items-center justify-center pb-20">
+      <div class="h-20 mb-10">
+          <h1
+          data-aos="zoom-in"
+          class="font-krona text-white">I COACH</h1>
+      </div>
+      <div class="flex flex-wrap justify-center gap-10">
+        <div 
+        data-aos="fade-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+        class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
+          <img src="Images/coach1.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
+          <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
+            <h2 class="text-3xl font-bold mb-4">Maria</h2>
+          </div>
         </div>
-        <div class="flex flex-wrap justify-center gap-10">
-          <div 
-          data-aos="fade-right"
-          data-aos-offset="300"
-          data-aos-easing="ease-in-sine"
-          class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
-            <img src="Images/coach1.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
-            <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
-              <h2 class="text-3xl font-bold mb-4">Maria</h2>
-            </div>
+        <div
+        data-aos="fade-up"
+        data-aos-duration="1000"
+        class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
+          <img src="Images/coach2.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
+          <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
+            <h2 class="text-3xl font-bold mb-4">Alessia</h2>
           </div>
-          <div
-          data-aos="fade-up"
-          data-aos-duration="1000"
-          class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
-            <img src="Images/coach2.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
-            <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
-              <h2 class="text-3xl font-bold mb-4">Alessia</h2>
-            </div>
-          </div>
-          <div
-          data-aos="fade-left"
-          data-aos-offset="300"
-          data-aos-easing="ease-in-sine"
-          class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
-            <img src="Images/coach3.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
-            <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
-              <h2 class="text-3xl font-bold mb-4">Marco</h2>
-            </div>
-          </div>
-          <div
-          data-aos="fade-right"
-          data-aos-offset="300"
-          data-aos-easing="ease-in-sine"
-          class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
-            <img src="Images/coach4.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
-            <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
-              <h2 class="text-3xl font-bold mb-4">Federica</h2>
-            </div>
-          </div>
-          <div
-          data-aos="fade-left"
-          data-aos-offset="300"
-          data-aos-easing="ease-in-sine"
-          class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
-            <img src="Images/coach5.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
-            <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
-              <h2 class="text-3xl font-bold mb-4">Paolo</h2>
-            </div>
-          </div>      
         </div>
-    </section>
+        <div
+        data-aos="fade-left"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+        class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
+          <img src="Images/coach3.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
+          <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
+            <h2 class="text-3xl font-bold mb-4">Marco</h2>
+          </div>
+        </div>
+        <div
+        data-aos="fade-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+        class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
+          <img src="Images/coach4.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
+          <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
+            <h2 class="text-3xl font-bold mb-4">Federica</h2>
+          </div>
+        </div>
+        <div
+        data-aos="fade-left"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+        class="bg-white rounded-lg shadow-lg w-[340px] sm:w-[400px] h-[620px] flex flex-col immagine-coach-mini">
+          <img src="Images/coach5.jpg" alt="Boxe" class="rounded-t-lg w-full h-[500px] object-center object-cover">
+          <div class="p-6 flex flex-col text-center justify-center items-center flex-1">
+            <h2 class="text-3xl font-bold mb-4">Paolo</h2>
+          </div>
+        </div>      
+      </div>
+  </section>
   </main>
 
   <footer class="flex flex-col bg-[#E8EDDF] ">
