--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
-<body class="overflow-x-hidden">
+<body class="">
   <div class="loader absolute w-full z-10 h-full bg-black flex items-center justify-center">
     <span class="lettera text-blue-800 font-bold tracking-[15px]">L</span>
     <span class="lettera text-blue-800 font-bold tracking-[15px]">O</span>
@@ -103,7 +103,7 @@
       </div>
     </nav>
   </header>  
-  <main>
+  <main class="overflow-x-hidden">
     <div id="toTopButton" class="hidden1">
       <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
         <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
