add overflow hiden index coach section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
     </nav>
   </header>  
-  <main class="overflow-x-hidden">
+  <main class="">
     <div id="toTopButton" class="hidden1">
       <button class="bg-blue-800 size-12 rounded-full fixed z-50 bottom-12 hover:bg-blue-900 right-4" title="Top of the Page">
         <img class="size-7 m-auto" src="Images/icons8-flèche-vers-le-haut-100.png" alt="immagine per andare in alto"/>
@@ -264,7 +264,7 @@
         </form>       
       </div>  
     </section> 
-    <section class="h flex flex-col">
+    <section class="overflow-hidden flex flex-col">
       <div class=" bg-black text-white flex justify-center items-center px-10 text-center py-10 lg:py-20">
         <h4 
         data-aos="zoom-in"
@@ -351,7 +351,7 @@
       </div>
       <img class="z-1 hidden xl:inline-block lg:absolute xl:w-[533px] xl:-right-40 2xl:-right-24" src="Images/deco.png" alt="">
     </section>
-    <section class="h-[1700px] md:h-[1100px] lg:h-[1350px] xl:h-[1400px] bg-[url(Images/bg-prezzi.jpeg)] bg-cover bg-center bg-fixed flex flex-col justify-center items-center pb-20 xl:pb-40">
+    <section class="h-[1700px] overflow-x-hidden md:h-[1100px] lg:h-[1350px] xl:h-[1400px] bg-[url(Images/bg-prezzi.jpeg)] bg-cover bg-center bg-fixed flex flex-col justify-center items-center pb-20 xl:pb-40">
       <img class="w-20 relative -top-20 md:hidden" src="Images/deco-iscriviti.png" alt="">
       <h4 
       data-aos="zoom-in"
